--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -154,7 +154,7 @@
         android:paddingTop="@dimen/_5sdp"
         android:paddingRight="@dimen/_5sdp"
         android:paddingBottom="@dimen/_5sdp"
-        android:text="Dont have an account ? Signup"
+        android:text="Dont have an account ? SignUp"
         android:textColor="@color/black"
         android:textSize="@dimen/_12sdp"
         app:fontFamily="@font/roboto_medium" />
