--- a/app/src/main/res/layout/dialog_order_success.xml
+++ b/app/src/main/res/layout/dialog_order_success.xml
@@ -7,13 +7,12 @@
     android:gravity="center"
     android:orientation="vertical">
 
-
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/_290sdp"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="@dimen/_290sdp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:gravity="center"
@@ -31,31 +30,52 @@
                 android:textColor="@color/black"
                 android:textSize="@dimen/_14sdp" />
 
-            <TextView
-                android:id="@+id/couponCodeEditText"
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:gravity="center"
-                android:paddingLeft="@dimen/_8sdp"
-                android:text="Your order was successful"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/roboto" />
+                android:layout_marginTop="@dimen/_20sdp">
 
-            <TextView
-                android:id="@+id/orderIDEditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:gravity="center"
-                android:paddingLeft="@dimen/_8sdp"
-                android:text="Order ID:"
-                android:textColor="@color/black"
-                android:textColorHint="@color/black"
-                android:textSize="@dimen/_12sdp"
-                app:fontFamily="@font/roboto" />
+                <ImageView
+                    android:layout_width="@dimen/_80sdp"
+                    android:layout_height="@dimen/_80sdp"
+                    android:layout_centerInParent="true"
+                    android:alpha="0.1"
+                    android:src="@drawable/gh_logo" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/couponCodeEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:paddingLeft="@dimen/_8sdp"
+                        android:text="Your order was successful"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_12sdp"
+                        app:fontFamily="@font/roboto" />
+
+                    <TextView
+                        android:id="@+id/orderIDEditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_10sdp"
+                        android:gravity="center"
+                        android:paddingLeft="@dimen/_8sdp"
+                        android:text="Order ID:"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/black"
+                        android:textSize="@dimen/_12sdp"
+                        app:fontFamily="@font/roboto" />
+
+                </LinearLayout>
+            </RelativeLayout>
+
 
             <LinearLayout
                 android:id="@+id/bottomLayout"
@@ -79,12 +99,6 @@
             </LinearLayout>
 
         </LinearLayout>
-
-        <ImageView
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_40sdp"
-            android:layout_margin="@dimen/_10sdp"
-            android:src="@drawable/gh_logo" />
 
     </RelativeLayout>
 
