--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -70,7 +70,7 @@
                     android:layout_height="@dimen/_12sdp"
                     android:layout_alignParentRight="true"
                     android:gravity="center"
-                    android:text="1"
+                    android:text="0"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_8sdp"
                     android:textStyle="bold" />
@@ -101,7 +101,8 @@
                     android:layout_height="@dimen/_12sdp"
                     android:layout_alignParentRight="true"
                     android:gravity="center"
-                    android:text="1"
+                    android:id="@+id/cartCountTextView"
+                    android:text="0"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_8sdp"
                     android:textStyle="bold" />
