--- a/app/src/main/res/layout/offer_products_list_item.xml
+++ b/app/src/main/res/layout/offer_products_list_item.xml
@@ -96,7 +96,7 @@
                 android:id="@+id/optionsSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_23sdp"
-                android:layout_alignParentBottom="true"/>
+                android:layout_alignParentBottom="true" />
 
         </RelativeLayout>
 
@@ -131,23 +131,125 @@
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/addTextView"
+        <!--  <TextView
+              android:id="@+id/addTextView"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="right"
+              android:layout_marginTop="@dimen/_4sdp"
+              android:layout_marginRight="@dimen/_5sdp"
+              android:background="@drawable/green_square_rounded"
+              android:gravity="center"
+              android:paddingLeft="@dimen/_13sdp"
+              android:paddingTop="@dimen/_3sdp"
+              android:paddingRight="@dimen/_13sdp"
+              android:paddingBottom="@dimen/_3sdp"
+              android:text="ADD"
+              android:textColor="@color/white"
+              android:textSize="@dimen/_10sdp"
+              android:visibility="gone" />-->
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="@dimen/_4sdp"
-            android:layout_marginRight="@dimen/_5sdp"
-            android:background="@drawable/green_square_rounded"
-            android:gravity="center"
-            android:paddingLeft="@dimen/_13sdp"
-            android:paddingTop="@dimen/_3sdp"
-            android:paddingRight="@dimen/_13sdp"
-            android:paddingBottom="@dimen/_3sdp"
-            android:text="ADD"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_10sdp"
-            android:visibility="gone" />
+            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginRight="@dimen/_3sdp"
+            android:gravity="right"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <RelativeLayout
+                android:id="@+id/cartAddLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.45"
+                android:background="@drawable/item_border_green"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/addTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:fontFamily="@font/quicksand_medium"
+                    android:gravity="center"
+                    android:paddingTop="@dimen/_4sdp"
+                    android:paddingBottom="@dimen/_4sdp"
+                    android:text="ADD"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_10sdp"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="@dimen/_1sdp"
+                    android:layout_marginRight="@dimen/_3sdp"
+                    android:text="+"
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/_7sdp"></TextView>
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/cartCountLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_gravity="center"
+                android:background="@drawable/item_border"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/minusTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/_9sdp"
+                    android:paddingRight="@dimen/_9sdp"
+                    android:text="-"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_11sdp" />
+
+                <View
+                    android:layout_width="@dimen/_1sdp"
+                    android:layout_height="match_parent"
+                    android:background="#cccccc"></View>
+
+                <TextView
+                    android:id="@+id/countTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/_7sdp"
+                    android:paddingRight="@dimen/_7sdp"
+                    android:text="1"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12sdp" />
+
+                <View
+                    android:layout_width="@dimen/_1sdp"
+                    android:layout_height="match_parent"
+                    android:background="#cccccc"></View>
+
+                <TextView
+                    android:id="@+id/plusTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/_9sdp"
+                    android:paddingRight="@dimen/_9sdp"
+                    android:text="+"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_11sdp" />
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
