--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -47,6 +47,7 @@
 
         <ImageView
             android:layout_width="@dimen/_150sdp"
+            android:id="@+id/appIconImageView"
             android:layout_height="@dimen/_150sdp"
             android:layout_marginTop="@dimen/_30sdp"
             android:src="@drawable/gh_logo" />
