--- a/app/src/main/res/layout/offer_products_list_item.xml
+++ b/app/src/main/res/layout/offer_products_list_item.xml
@@ -33,21 +33,22 @@
                 android:src="#989898" />
 
             <RelativeLayout
-                android:layout_width="@dimen/_22sdp"
-                android:layout_height="@dimen/_22sdp"
+                android:layout_width="@dimen/_21sdp"
+                android:layout_height="@dimen/_21sdp"
+                android:id="@+id/discountLayout"
                 android:layout_alignParentLeft="true"
-                android:layout_margin="@dimen/_2sdp"
+                android:layout_margin="@dimen/_4sdp"
                 android:background="@drawable/circle_filled_red"
                 android:visibility="gone">
 
                 <TextView
-                    android:layout_width="@dimen/_22sdp"
-                    android:layout_height="@dimen/_22sdp"
+                    android:layout_width="@dimen/_21sdp"
+                    android:layout_height="@dimen/_21sdp"
                     android:layout_centerInParent="true"
                     android:gravity="center"
-                    android:text="20%"
+                    android:id="@+id/discountTextView"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_8sdp" />
+                    android:textSize="@dimen/_7sdp" />
 
             </RelativeLayout>
 
@@ -104,7 +105,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_3sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:orientation="horizontal">
 
             <TextView
@@ -115,6 +116,7 @@
                 android:gravity="left|center_vertical"
                 android:paddingLeft="@dimen/_3sdp"
                 android:text="₹350"
+                android:textColor="@color/black"
                 android:textSize="@dimen/_11sdp" />
 
             <TextView
@@ -149,22 +151,21 @@
               android:textSize="@dimen/_10sdp"
               android:visibility="gone" />-->
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_8sdp"
             android:layout_marginRight="@dimen/_3sdp"
-            android:gravity="right"
-            android:orientation="horizontal"
             android:weightSum="1">
 
             <RelativeLayout
                 android:id="@+id/cartAddLayout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.45"
+                android:layout_width="@dimen/_45sdp"
+                android:layout_height="@dimen/_22sdp"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="right"
                 android:background="@drawable/item_border_green"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/addTextView"
@@ -198,11 +199,12 @@
             <LinearLayout
                 android:id="@+id/cartCountLayout"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/_25sdp"
+                android:layout_height="@dimen/_22sdp"
+                android:layout_alignParentRight="true"
                 android:layout_gravity="center"
                 android:background="@drawable/item_border"
                 android:orientation="horizontal"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <TextView
                     android:id="@+id/minusTextView"
@@ -213,7 +215,7 @@
                     android:paddingRight="@dimen/_9sdp"
                     android:text="-"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_11sdp" />
+                    android:textSize="@dimen/_10sdp" />
 
                 <View
                     android:layout_width="@dimen/_1sdp"
@@ -229,7 +231,7 @@
                     android:paddingRight="@dimen/_7sdp"
                     android:text="1"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_12sdp" />
+                    android:textSize="@dimen/_11sdp" />
 
                 <View
                     android:layout_width="@dimen/_1sdp"
@@ -245,11 +247,11 @@
                     android:paddingRight="@dimen/_9sdp"
                     android:text="+"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_11sdp" />
+                    android:textSize="@dimen/_10sdp" />
 
             </LinearLayout>
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
