--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -108,17 +108,58 @@
         android:textStyle="italic"
         android:visibility="gone"></TextView>
 
-    <TextView
-        android:id="@+id/paymentTextView"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_38sdp"
+        android:id="@+id/checkoutLayout"
         android:layout_alignParentBottom="true"
-        android:background="#17435C"
-        android:fontFamily="@font/roboto_medium"
-        android:gravity="center"
-        android:text="Checkout"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_13sdp"
-        android:visibility="invisible" />
+        android:background="#17435C">
+
+        <TextView
+            android:id="@+id/paymentTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/roboto_medium"
+            android:gravity="center"
+            android:text="Checkout"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_13sdp"
+            android:visibility="visible" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:fontFamily="@font/roboto_medium"
+                android:gravity="center"
+                android:text="Total: Rs."
+                android:textColor="@color/white"
+                android:textSize="@dimen/_9sdp"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/totalAmountTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_2sdp"
+                android:fontFamily="@font/roboto_medium"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@color/white"
+                android:textSize="@dimen/_10sdp"
+                android:textStyle="bold"
+                android:visibility="visible" />
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
