--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,7 @@
                 android:id="@+id/userNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email / Mobile Number"
+                android:hint="Email"
                 android:imeOptions="actionNext"
                 android:inputType="text"
                 android:maxLength="40"
@@ -80,23 +80,6 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
-            android:id="@+id/forgetPasswordTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="@dimen/_16sdp"
-            android:paddingLeft="@dimen/_20sdp"
-            android:paddingTop="@dimen/_5sdp"
-            android:paddingRight="@dimen/_5sdp"
-            android:paddingBottom="@dimen/_5sdp"
-            android:text="forgot password ? "
-            android:textColor="@color/green"
-            android:textSize="@dimen/_12sdp"
-            android:textStyle="italic"
-            app:fontFamily="@font/roboto" />
-
-
-        <TextView
             android:id="@+id/loginTextView"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
@@ -113,9 +96,41 @@
             android:textSize="@dimen/_12sdp"
             app:fontFamily="@font/roboto_medium" />
 
+        <TextView
+            android:id="@+id/forgetPasswordTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:paddingLeft="@dimen/_20sdp"
+            android:paddingTop="@dimen/_5sdp"
+            android:paddingRight="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            android:text="forgot password ? "
+            android:textColor="@color/green"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="italic"
+            app:fontFamily="@font/roboto" />
+
+        <TextView
+            android:id="@+id/registerTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:paddingLeft="@dimen/_16sdp"
+            android:paddingTop="@dimen/_4sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:gravity="center"
+            android:paddingRight="@dimen/_16sdp"
+            android:paddingBottom="@dimen/_4sdp"
+            android:textStyle="bold"
+            android:background="@drawable/item_border"
+            android:text="Sign Up"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_12sdp"
+            app:fontFamily="@font/roboto" />
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -137,11 +152,11 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_140sdp"
         android:layout_alignParentBottom="true"
+        android:alpha="0.8"
         android:scaleType="fitXY"
         android:src="@drawable/bottom_background" />
 
-
-    <TextView
+    <!--<TextView
         android:id="@+id/registerTextView"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
@@ -157,7 +172,7 @@
         android:text="Dont have an account ? SignUp"
         android:textColor="@color/black"
         android:textSize="@dimen/_12sdp"
-        app:fontFamily="@font/roboto_medium" />
+        app:fontFamily="@font/roboto_medium" />-->
 
 
 </RelativeLayout>
