--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -138,8 +138,7 @@
                         android:text="Madhapur Petrol Pump..."
                         android:textColor="#33383f"
                         android:textSize="@dimen/_11sdp"
-                        android:textStyle="bold"
-                        app:fontFamily="@font/quicksand_medium" />
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
