--- a/app/src/main/res/layout/offer_products_list_item.xml
+++ b/app/src/main/res/layout/offer_products_list_item.xml
@@ -9,8 +9,9 @@
 
     <LinearLayout
         android:id="@+id/itemLayout"
-        android:layout_width="@dimen/_120sdp"
+        android:layout_width="@dimen/_130sdp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_6sdp"
         android:layout_marginRight="@dimen/_6sdp"
         android:background="@color/white"
         android:elevation="@dimen/_3sdp"
@@ -29,8 +30,7 @@
                 android:layout_height="@dimen/_110sdp"
                 android:layout_centerInParent="true"
                 android:padding="@dimen/_4sdp"
-                android:scaleType="fitXY"
-                android:src="#989898" />
+                android:scaleType="fitXY" />
 
             <RelativeLayout
                 android:layout_width="@dimen/_21sdp"
