--- a/app/src/main/res/layout/home_list_item.xml
+++ b/app/src/main/res/layout/home_list_item.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@color/background_color"
         android:orientation="vertical"
+        android:gravity="center"
         android:paddingLeft="@dimen/_6sdp"
         android:paddingRight="@dimen/_6sdp">
 
@@ -32,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="center"
             android:paddingBottom="@dimen/_5sdp">
 
             <androidx.recyclerview.widget.RecyclerView
