--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -39,6 +39,7 @@
             <RelativeLayout
                 android:layout_width="@dimen/_26sdp"
                 android:layout_height="@dimen/_26sdp"
+                android:visibility="invisible"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:gravity="center_vertical">
 
