--- a/app/src/main/res/layout/activity_category_products.xml
+++ b/app/src/main/res/layout/activity_category_products.xml
@@ -50,6 +50,7 @@
                 android:layout_width="@dimen/_26sdp"
                 android:layout_height="@dimen/_26sdp"
                 android:layout_marginRight="@dimen/_10sdp"
+                android:visibility="invisible"
                 android:gravity="center_vertical">
 
                 <ImageView
