--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,7 @@
                 android:layout_width="@dimen/_27sdp"
                 android:layout_height="@dimen/_27sdp"
                 android:layout_marginRight="@dimen/_10sdp"
+                android:visibility="invisible"
                 android:gravity="center_vertical">
 
                 <ImageView
